Fixes text overflow to show ellipsis on both gif elements

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -75,22 +75,15 @@
 }
 .window-item {
 	padding: 2px;
-	width: 100%;
-	// display: relative;
 	.wi-header {
-		// display: absolute;
-		// left: 0;
-		// right: 0;
-		// top: 0;
-		// z-index: 1;
-		// margin: 3px;
-
 		padding: 0.375rem;
-		font-size: 0.875rem;
+		padding-right: 2rem;
 		margin-bottom: 0.125rem;
+		position: relative;
 		overflow: hidden;
 		white-space: nowrap;
-		position: relative;
+		font-size: 0.875rem;
+		text-overflow: ellipsis;
 		.remove-element {
 			background: url(../assets/icons/close.svg);
 			width: 1rem;
@@ -98,6 +91,7 @@
 			position: absolute;
 			right: 0.5rem;
 			top: 0.5rem;
+			z-index: 1;
 		}
 	}
 	.img-container {
@@ -136,6 +130,7 @@
 		white-space: nowrap;
 		overflow: hidden;
 		display: none;
+		text-overflow: ellipsis;
 	}
 	.img-element {
 		width: 100%;
@@ -265,22 +260,17 @@ header {
 .search-results {
 	.result-container {
 		display: grid;
-		grid-template: 1fr / 1fr;
+		grid-template: 1fr / minmax(0, 1fr);
 		gap: 1rem;
 	}
 	@media screen and (min-width: 576px) {
 		.result-container {
-			grid-template: 1fr / repeat(2, 1fr);
-		}
-	}
-	@media screen and (min-width: 768px) {
-		.result-container {
-			grid-template: 1fr / repeat(3, 1fr);
+			grid-template: 1fr / repeat(2, minmax(0, 1fr));
 		}
 	}
 	@media screen and (min-width: 992px) {
 		.result-container {
-			grid-template: 1fr / repeat(4, 1fr);
+			grid-template: 1fr / repeat(4, minmax(0, 1fr));
 		}
 	}
 }
